@@ -1,0 +1,14 @@
+﻿using flash.display;
+
+namespace redroguecs
+{
+	public class InstructionsMC : MovieClip
+	{
+		public MovieClip collect;
+		public MovieClip combat;
+		public MovieClip exit;
+
+		public InstructionsMC () {}
+	}
+}
+
